# siliko

./: .gitignore  AUTHORS  Build.md  Build.txt  CMakeLists.txt  License.txt  Makefile  Makefile.am  README  Readme.md  Readme.txt  configure.ac  ct.py  main.c  parser.y  parserx.h  sw.py  tokenizer.l  vldc.c  vldc.h
Lib-C/: XaviLexer.c  XaviParser.c  XaviParser.h  XaviTree.h
Tests/: CMakeLists.txt  TestXavi++Functions.cpp  TestXavi++Lexer.cpp  TestXaviLexer.c  TestXaviLinkage.c  TestXaviPPFunctions.cpp  TestXaviPPLexer.cpp  TestXaviPPLinkage.cpp  XaviTestFunctions.c  XaviTestFunctions.cpp  XaviTestHash.c  XaviTestHash.cpp  XaviTestLexer.c  XaviTestLexer.cpp  XaviTestLinkage.c
Xavi/: CMakeLists.txt  CStringSource.cpp  CStringSource.hpp  DataSource.c  DataSource.h  DataSource.hpp  FunctionCall.cpp  FunctionCall.hpp  FunctionCaller.c  FunctionCaller.cpp  FunctionCaller.h  FunctionCaller.hpp  Functions.c  Functions.cpp  Functions.h  Functions.hpp  Hash.c  Hash.h  InfixParser.c  InfixParser.cpp  InfixParser.h  InfixParser.hpp  Lexer.c  Lexer.cpp  Lexer.h  Lexer.hpp  Parser.cpp  Parser.hpp  StringSource.c  StringSource.cpp  StringSource.h  StringSource.hpp  SyntaxTree.c  SyntaxTree.cpp  SyntaxTree.h  SyntaxTree.hpp  Token.cpp  Token.h  Token.hpp  Value.c  (+31 more)
Xavi++/: CMakeLists.txt  CStringSource.cpp  CStringSource.hpp  DataSource.hpp  FunctionCaller.cpp  FunctionCaller.hpp  Functions.cpp  Functions.hpp  Hash.cpp  Hash.hpp  InfixParser.cpp  InfixParser.hpp  Lexer.cpp  Lexer.hpp  SyntaxTree.cpp  SyntaxTree.hpp  Token.cpp  Token.hpp  Value.cpp  Value.hpp  W32Dll.hpp
Xavi++-Cli/: CMakeLists.txt  StringSource.cpp  StringSource.hpp  Xavi++-Cli.cpp
Xavi++-Gui-Qt/: CMakeLists.txt  EvalWindow.cpp  EvalWindow.hpp  EvalWindow.ui  Xavi++-Gui-Qt.cpp
Xavi-Cli/: CMakeLists.txt  Xavi-Cli.c
Xavi-Gui-Cocoa/: CMakeLists.txt  Delegate.h  Delegate.m  MainMenu.xib
Xavi-Gui-Gtk/: CMakeLists.txt  EvalWindow.c  EvalWindow.glade  EvalWindow.h  Xavi-Gui-Gtk.c
Xavi-Gui-Qt/: CMakeLists.txt  EvalWindow.cpp  EvalWindow.ui  QStringSource.cpp  QStringSource.hpp
Xavi-Gui-Win32/: About.h  About.rc  CMakeLists.txt  EvalWindow.c  EvalWindow.h  Menu.h  Menu.rc  Xavi-Gui-Win32.c
XaviPP/: CMakeLists.txt  CStringSource.cpp  CStringSource.hpp  FunctionCaller.cpp  FunctionCaller.hpp  Lexer.cpp  Lexer.hpp  SyntaxTree.cpp  SyntaxTree.hpp  Token.hpp  Value.cpp  Value.hpp  W32Dll.hpp
XaviPP-Cli/: CMakeLists.txt  StringSource.cpp  StringSource.hpp  XaviPP-Cli.cpp
XaviPP-Gui-Cocoa/: CMakeLists.txt  Delegate.hh  Delegate.mm  Info.plist.in  MainMenu.xib
XaviPP-Gui-Gtk/: CMakeLists.txt  EvalWindow.cpp  EvalWindow.glade  EvalWindow.hpp  XaviPP-Gui-Gtk.cpp
XaviPP-Gui-Qt/: CMakeLists.txt  EvalWindow.cpp  EvalWindow.ui  QStringSource.cpp  QStringSource.hpp  XaviPP-Gui-Qt.cpp
XaviPP-Gui-Win32/: About.cpp  About.hpp  About.rc  AboutRc.h  CMakeLists.txt  EvalWindow.cpp  EvalWindow.hpp  EvalWindow.rc  Id.h  Menu.h  XaviPP-Gui-Win32.cpp
Xavista/: CMakeLists.txt  QStringSource.cpp  QStringSource.hpp  Xavista.cpp  XavistaWindow.cpp  XavistaWindow.h  XavistaWindow.hpp  XavistaWindow.ui
Xavita/: CMakeLists.txt  Xavita.cpp
Xavita-C/: CMakeLists.txt  Xavita.c
XvcGui/: CMakeLists.txt  XvcGui.cpp  XvcGui.pro  XvcWindow.cpp  XvcWindow.h  XvcWindow.ui
cli/: CMakeLists.txt  main.c
cmake/: FindReadline.cmake
cocoa/: CMakeLists.txt  Delegate.h  Delegate.m  Info.plist.in  Main.m  MainMenu.xib  siliko.icns
command/: CMakeLists.txt  main.c  rl.c
cpack/: WixLicense.txt
gtk2/: CMakeLists.txt  EvalWindow.c
gtk3/: CMakeLists.txt  EvalWindow.c  EvalWindow.glade  EvalWindow.h  Main.c  gresource.xml  siliko.desktop  siliko.gresource.xml  silikujo.desktop
gtk4/: EvalWindow.h  EvalWindow.ui
gui-osx/: CMakeLists.txt  Delegate.h  Delegate.m
gui-unix/: CMakeLists.txt  EvalWindow.c  EvalWindow.h  Main.c
gui-windows/: About.c  About.h  About.rc  EvalWindow.c  EvalWindow.h  EvalWindow.rc  Id.h  WinMain.c
lib/: CMakeLists.txt  DataSource.c  DataSource.h  FunctionCaller.c  FunctionCaller.h  Functions.c  Functions.h  Hash.c  Hash.h  InfixParser.c  InfixParser.h  Lexer.c  Lexer.h  Siliko.pc.in  SilikoConfig.cmake  StringSource.c  StringSource.h  SyntaxTree.c  SyntaxTree.h  Token.h  Value.c  Value.h  W32Dll.h
lib/include/Siliko/: DataSource.h  FunctionCaller.h  InfixParser.h  Lexer.h  StringSource.h  SyntaxTree.h  Token.h  Value.h
lib/src/: DataSource.c  FunctionCaller.c  Functions.c  Functions.h  Hash.h  InfixParser.c  Lexer.c  StringSource.c  SyntaxTree.c  Value.c
libxvcalc/: CMakeLists.txt  XVCalc.c  XVCalc.h  XvcArglist.c  XvcArglist.h  XvcCleanup.c  XvcCleanup.h  XvcEvaluate.c  XvcEvaluate.h  XvcFunctionCall.c  XvcFunctionCall.h  XvcFunctionId.c  XvcFunctionId.h  XvcFunctions.c  XvcFunctions.h  XvcOperatorCall.c  XvcOperatorCall.h  XvcOperators.c  XvcOperators.h  XvcState.c  XvcState.h  XvcStructs.h  XvcTree.c  XvcTree.h  XvcYyLexer.l  XvcYyParser.y  cleanup.c  cleanup.h  functions.c  functions.h  operators.c  operators.h  parser.y  structs.h  tokenize.l  tree.c  tree.h  xvcalc.c  xvcalc.h  xvcalcix.h  (+1 more)
packaging/: CMakeLists.txt
python/: CMakeLists.txt  vldc.py  xvcalc.py
silikilo/: CMakeLists.txt  Version.rc.in  main.c
siliko/: CMakeLists.txt  SilikoConfig.cmake
siliko/include-ide/Siliko/: Api.h
siliko/include/Siliko/: FunctionCaller.h  InfixParser.h  StringSource.h  SyntaxTree.h
siliko/src/: DataSource.c  FunctionCaller.c  Functions.h  Hash.c  Lexer.c  SyntaxTree.c  Value.c  Version.rc.in
silikujo-macos/: CMakeLists.txt
silikujo-unix/: CMakeLists.txt  EvalWindow.c  Main.c  gresource.xml
silikujo-windows/: About.c  About.rc  CMakeLists.txt  EvalWindow.c  EvalWindow.h  Icon.rc  Id.h  WinMain.c
src/: CMakeLists.txt  Makefile.am  Makefile.orig  libvldc.c  libvldc.h  main.c  parser.y  parserx.c  parserx.h  tokenize.l  tokenizer.l  tree.c  vldc.c  xvcalc.c  xvcalc.h  xvcalcix.h
tests/: CMakeLists.txt  TestLexer.c  TestLinkage.c  XvcTestFunctions.c  XvcTestLinkage.c  xvctest.c
win32/: About.c  About.h  About.rc  CMakeLists.txt  EvalWindow.c  EvalWindow.h  EvalWindow.rc  Icon.rc  Id.h  WinMain.c
